--- a/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_ro.properties
+++ b/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_ro.properties
@@ -1,7 +1,7 @@
 allReportingOrganizations=All Reporting Organizations RO
 reportingOrganizations=Reporting Organizations RO
-allExtendingOrganizations=All Extending Organizations RO
-extendingOrganizations=Extending Organizations RO
+allExtendingAgencies=All Extending Agencies RO
+extendingAgencies=Extending Agencies RO
 allTypesOfAid=All Types of Aid RO
 typesOfAid=Types of Aid RO
 allTypesOfFlow=All Types of Flow RO
