Add Bi/Multilateral dimension example, as draft implementation. Add dimension to the Cube consequently.

--- a/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_en.properties
+++ b/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_en.properties
@@ -8,6 +8,8 @@ allTypesOfFlow=All Types of Flow EN
 typesOfFlow=Types of Flow EN
 sectors=Sectors EN
 allSectors=All Sectors EN
+allBiMultilateral=Bi-Multilateral EN
+biMultilateral=Bi-Multilateral EN
 
 exportCreditAmount=Export Credit Amount EN
 IRTCAmount=IRTC Amount EN
