--- a/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_ro.properties
+++ b/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_ro.properties
@@ -8,6 +8,8 @@ allTypesOfFlow=All Types of Flow RO
 typesOfFlow=Types of Flow RO
 sectors=Sectors RO
 allSectors=All Sectors RO
+allBiMultilateral=Bi-Multilateral RO
+biMultilateral=Bi-Multilateral RO
 
 exportCreditAmount=Export Credit Amount RO
 IRTCAmount=IRTC Amount RO
