added string for types of finance

--- a/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_en.properties
+++ b/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_en.properties
@@ -10,7 +10,8 @@ sectors=Sectors EN
 allSectors=All Sectors EN
 allBiMultilateral=Bi-Multilateral EN
 biMultilateral=Bi-Multilateral EN
-
+allTypesOfFinance=All Types of Finance
+typesOfFinance=Types of Finance
 exportCreditAmount=Export Credit Amount EN
 IRTCAmount=IRTC Amount EN
 extendedAmount=Extended Amount EN
