--- a/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_ro.properties
+++ b/eudevfin/cda-wrapper/src/main/resources/org/devgateway/eudevfin/cda/service/MondrianMessages_ro.properties
@@ -10,7 +10,8 @@ sectors=Sectors RO
 allSectors=All Sectors RO
 allBiMultilateral=Bi-Multilateral RO
 biMultilateral=Bi-Multilateral RO
-
+allTypesOfFinance=All Types of Finance
+typesOfFinance=Types of Finance
 exportCreditAmount=Export Credit Amount RO
 IRTCAmount=IRTC Amount RO
 extendedAmount=Extended Amount RO
