I18n bundle and support for the AQ Report

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/i18n_ro.properties
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/i18n_ro.properties
@@ -1,1 +1,46 @@
 dac1.title=TABEL DAC 1
+aq.title=ADVANCE QUESTIONNAIRE ON MAIN ODA AGGREGATES
+aq.subtitle=(2012 Edition)
+aq.reportingCountry=Reporting Country:
+aq.exchangeRatesUsed=Exchange rates used
+aq.disbursements=DISBURSEMENTS
+aq.row=Row
+aq.developingCountries=DEVELOPING COUNTRIES (3)
+aq.odaNet=Official Development Assistance, net
+aq.memoItems=Memo items:
+aq.millionUSDollars=Millions US dollars
+aq.bilateralODANet.title=I. Bilateral ODA, net
+aq.bilateralODANet.subtitle=Of which: selected types of aid
+aq.bilateral.budgetSupport=a. Budget Support
+aq.bilateral.bilateralCoreSupport=b. Bilateral core support & pooled programmes & funds
+aq.bilateral.projectTypeInterventions=c. Project-type interventions
+aq.bilateral.expertsOtherTechnicalAssistance=d. Experts and other technical assistance
+aq.bilateral.debtRelief=e. Debt relief
+aq.bilateral.administrativeCostsNotIncluded=f. Administrative costs not included elsewhere
+aq.bilateral.financialInstruments=Financial Instruments
+aq.bilateral.grants=a. Grants
+aq.bilateral.nonGrantsGross=b. Non grants, gross
+aq.bilateral.nonGrantsNets=c. Non grants, net
+aq.bilateral.nonGrantsNets.subtitle=of which: Offsetting entry for debt forgiveness
+aq.multilateral.title=II. Multilateral ODA, net
+aq.multilateral.subtitle=Multilateral contributions to:
+aq.multilateral.unitedNations=a. United Nations
+aq.multilateral.EU=b. EU
+aq.multilateral.worldBank=c. World Bank
+aq.multilateral.regionalDevelopmentBanks=d. Regional development banks and funds
+aq.multilateral.other=e. Other
+aq.memo.recipientBreakdown=1. Recipient breakdown of bilateral ODA, net:
+aq.memo.ldcs=a. to LDCs
+aq.memo.africa=b. to Africa
+aq.memo.subsaharanAfrica=c. to Sub-Saharan Africa, total
+aq.memo.afghanistan=d. to Afghanistan, total
+aq.memo.iraq=e. to Iraq
+aq.memo.sectoralBreakdown=2. Sectoral breakdown of bilateral ODA, net:
+aq.memo.humanitarianAid=a. Humanitarian aid
+aq.memo.shortTermReconstruction=of which: Short-term reconstruction
+aq.memo.developmentFoodAid=b. Development food aid
+aq.debtReliefGrants=3. Debt relief grants, gross
+aq.totalGrossODA=4. Total gross ODA
+aq.grossNationalIncome=GROSS NATIONAL INCOME AT MARKET PRICES
+aq.ODAGNI=ODA as per cent of GNI
+aq.population=Population
