--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/i18n_ro.properties
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/i18n_ro.properties
@@ -1,6 +1,6 @@
 dac1.title=TABEL DAC 1
 aq.title=ADVANCE QUESTIONNAIRE ON MAIN ODA AGGREGATES
-aq.subtitle=(2012 Edition)
+aq.subtitle=Edition
 aq.reportingCountry=Reporting Country:
 aq.exchangeRatesUsed=Exchange rates used
 aq.disbursements=DISBURSEMENTS
