--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/i18n_ro.properties
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/i18n_ro.properties
@@ -1,4 +1,5 @@
 dac1.title=TABEL DAC 1
+dac2a.title=TABLE DAC 2A<br/> DESTINATION OF OFFICIAL DEVELOPMENT ASSISTANCE - DISBURSEMENTS
 aq.title=ADVANCE QUESTIONNAIRE ON MAIN ODA AGGREGATES
 aq.subtitle=Edition
 aq.reportingCountry=Reporting Country:
