--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages_ro.properties
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages_ro.properties
@@ -1,30 +1,61 @@
-allExtendingAgencies=All Extending Agencies RO
-extendingAgencies=Extending Agencies RO
-allTypesOfAid=All Types of Aid RO
-typesOfAid=Types of Aid RO
-allTypesOfFlow=All Types of Flow RO
-typesOfFlow=Types of Flow RO
-sectors=Sectors RO
-allSectors=All Sectors RO
-allBiMultilateral=Bi-Multilateral RO
-biMultilateral=Bi-Multilateral RO
-allTypesOfFinance=All Types of Finance
-typesOfFinance=Types of Finance
-exportCreditAmount=Export Credit Amount RO
-IRTCAmount=IRTC Amount RO
-extendedAmount=Extended Amount RO
-currentExtendedAmount=Current Extended Amount RO
-year1ExtendedAmount=Year 1 Extended Amount RO
-year2ExtendedAmount=Year 2 Extended Amount RO
-partiallyUntiedAmount=Partially Untied Amount RO
-receivedAmount=Received Amount RO
-tiedAmount=Tied Amount  RO
-untiedAmount=Untied Amount RO
-interestArrearsAmount=Interest Arrears Amount RO
-principalArrearsAmount=Principal Arrears Amount RO
-commitmentsAmount=Commitments Amount RO
-interestReceivedAmount=Interest Received Amount RO
-principalDisbursedAmount=Principal Disbursed Amount RO
-expertCommitmentsAmount=Expert Commitments Amount RO
-expertExtendedAmount=Expert Extended Amount RO
-
+areaDimension=Area
+areaCode=Code
+countryDimension=Country
+geography=Geography
+countryName=Name
+incomeGroupDimension=Income Group
+incomeGroupName=Name
+extendingAgencyDimension=Extending Agency
+extendingAgencyCode=Code
+extendingAgencyAcronym=Acronym
+extendingAgencyName=Name
+channelDimension=Channel of Delivery
+channelCode=Code
+channelName=Name
+typeOfAidDimension=Type of Aid
+typeOfAidCode=Code
+typeOfAidName=Name
+typeOfFlowDimension=Type of Flow
+typeOfFlowCode=Code
+typeOfFlowName=Name
+typeOfFinanceDimension=Type of Finance
+typeOfFinanceCode=Code
+typeOfFinanceName=Name
+sectorDimension=Purpose Code
+sectorCode=Code
+sectorName=Name
+biMultilateralDimension=Bi/Multilateral
+biMultilateralCode=Code
+biMultilateralName=Name
+txTitleDimension=Project Information
+txTitleId=ID
+txTitleTitle=Title
+reportingYearDimension=Reporting Year
+reportingYear=Year
+formTypeDimension=Transaction Type
+formTypeName=Name
+investmentDimension=Investment
+investmentName=Yes/No
+PBADimension=Programme Based Approach
+PBAName=Yes/No
+FTCDimension=Free Standing Technical Cooperation
+FTCName=Yes/No
+CPADimension=CPA
+CPAName=Yes/No
+coFinancedDimension=Co-Financed
+coFinancedName=Yes/No
+extendedAmount=Extended
+extendedAmountCurrencyNatlOecd=Extended
+receivedAmount=Received
+receivedAmountCurrencyNatlOecd=Received
+commitmentsAmount=Commitments
+commitmentsAmountCurrencyNatlOecd=Commitments
+interestReceivedAmount=Interest
+interestReceivedAmountCurrencyNatlOecd=Interest
+expertCommitmentsAmount=Expert Commitments
+expertCommitmentsAmountCurrencyNatlOecd=Expert Commitments
+expertExtendedAmount=Expert Extended
+expertExtendedAmountCurrencyNatlOecd=Expert Extended
+netAmountCurrencyNatlOecd=Net Amounts
+numberOfTransactions=Number of Transactions
+allMember=All
