--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages_ro.properties
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages_ro.properties
@@ -45,18 +45,12 @@ CPAName=CPA Yes/No
 coFinancedDimension=Co-Financed
 coFinancedName=Co-Financed Yes/No
 extendedAmount=Extended
-extendedAmountCurrencyNatlOecd=Extended
 receivedAmount=Received
-receivedAmountCurrencyNatlOecd=Received
 commitmentsAmount=Commitments
-commitmentsAmountCurrencyNatlOecd=Commitments
 interestReceivedAmount=Interest
-interestReceivedAmountCurrencyNatlOecd=Interest
 expertCommitmentsAmount=Expert Commitments
-expertCommitmentsAmountCurrencyNatlOecd=Expert Commitments
 expertExtendedAmount=Expert Extended
-expertExtendedAmountCurrencyNatlOecd=Expert Extended
-netAmountCurrencyNatlOecd=Net Amounts
+netAmount=Net Amounts
 numberOfTransactions=Number of Transactions
 exportCreditAmount=Export Credit Amount
 currentExtendedAmount=Current Extended Amount
@@ -68,9 +62,9 @@ untiedAmount=Untied Amount
 interestArrearsAmount=Interest Arrears Amount
 principalArrearsAmount=Principal Arrears Amount
 principalDisbursedAmount=Principal Disbursed Amount
-allMember=All
 budgetMTEFDisbCurrentYear=Budget/MTEF Disb Current Year
 budgetMTEFDisbYear1=Budget/MTEF Disb Current Year+1
 budgetMTEFDisbYear2=Budget/MTEF Disb Current Year+2
 budgetMTEFDisbYear3=Budget/MTEF Disb Current Year+3
 budgetMTEFDisbYear4=Budget/MTEF Disb Current Year+4
+allMember=All
